Closed Bug 1769914 Opened 2 years ago Closed 2 years ago

Permanent smoosh Exception: Failed to test XUL condition 'wasmIsSupported()'; output was '', stderr was ''

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox100 --- unaffected
firefox101 --- unaffected
firefox102 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: nbp)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: archaeopteryx [at] coole-files.de
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=378365492&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ITCa2PGURtmkKxnJp1BmeA/runs/0/artifacts/public/logs/live_backing.log


[task 2022-05-17T15:46:40.456Z] testAssemblerBuffer_BufferOffset
[task 2022-05-17T15:46:40.469Z] TEST-PASS | testAssemblerBuffer_BufferOffset | ok
[task 2022-05-17T15:46:40.469Z] 
[task 2022-05-17T15:46:40.469Z] Passed: ran 795 tests.
[task 2022-05-17T15:46:40.470Z] in directory /builds/worker/workspace/obj-spider, running ['setarch', 'x86_64', '-R', 'make', 'check-jstests']
[task 2022-05-17T15:46:40.478Z] make -C js/src check-jstests
[task 2022-05-17T15:46:40.483Z] make[1]: Entering directory '/builds/worker/workspace/obj-spider/js/src'
[task 2022-05-17T15:46:40.483Z] ../../dist/bin/run-mozilla.sh /builds/worker/workspace/obj-spider/_virtualenvs/build/bin/python -u /builds/worker/checkouts/gecko/js/src/tests/jstests.py \
[task 2022-05-17T15:46:40.483Z] 	--no-progress --format=automation --timeout 300 \
[task 2022-05-17T15:46:40.483Z] 	--args='--dll /builds/worker/fetches/injector/libbreakpadinjector.so' --args='--smoosh' --jitflags=jstests --exclude-file=/builds/worker/checkouts/gecko/js/src/devtools/automation/smoosh-jstests-known-failure.txt \
[task 2022-05-17T15:46:40.483Z] 	../../dist/bin/js
[task 2022-05-17T15:46:48.592Z] Traceback (most recent call last):
[task 2022-05-17T15:46:48.592Z]   File "/builds/worker/checkouts/gecko/js/src/tests/jstests.py", line 877, in <module>
[task 2022-05-17T15:46:48.592Z]     sys.exit(main())
[task 2022-05-17T15:46:48.592Z]   File "/builds/worker/checkouts/gecko/js/src/tests/jstests.py", line 759, in main
[task 2022-05-17T15:46:48.592Z]     test_count, test_gen = load_tests(options, requested_paths, excluded_paths)
[task 2022-05-17T15:46:48.592Z]   File "/builds/worker/checkouts/gecko/js/src/tests/jstests.py", line 674, in load_tests
[task 2022-05-17T15:46:48.592Z]     wpt_tests = load_wpt_tests(xul_tester, requested_paths, excluded_paths)
[task 2022-05-17T15:46:48.592Z]   File "/builds/worker/checkouts/gecko/js/src/tests/jstests.py", line 567, in load_wpt_tests
[task 2022-05-17T15:46:48.592Z]     "wasm": xul_tester.test("wasmIsSupported()"),
[task 2022-05-17T15:46:48.592Z]   File "/builds/worker/checkouts/gecko/js/src/tests/lib/manifest.py", line 113, in test
[task 2022-05-17T15:46:48.592Z]     return self._test_local(cond, options=options)
[task 2022-05-17T15:46:48.592Z]   File "/builds/worker/checkouts/gecko/js/src/tests/lib/manifest.py", line 196, in _test_local
[task 2022-05-17T15:46:48.592Z]     raise Exception(
[task 2022-05-17T15:46:48.592Z] Exception: Failed to test XUL condition 'wasmIsSupported()'; output was '', stderr was ''
[task 2022-05-17T15:46:48.743Z] make[1]: *** [Makefile:63: check-jstests] Error 1

I have no clue what this error message and stack traces are supposed to mean …
I suspect this bug is a duplicate of Bug 1769871, but as I do not understand this error, I have no clue.

This patch fixes a mistake added in Bug 1756003, where the code was mistakenly
added in the non-smoosh configuration preprocessor block. This is fixed by
moving it out of the condition.

Assignee: nobody → nicolas.b.pierron
Status: NEW → ASSIGNED
Pushed by npierron@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/260a84bda152
Move delazification-mode CLI out of JS_ENABLE_SMOOSH preprocessor condition. r=arai
Flags: needinfo?(nicolas.b.pierron)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: