Bug 1769914 - Move delazification-mode CLI out of JS_ENABLE_SMOOSH preprocessor condition. r=arai

This patch fixes a mistake added in Bug 1756003, where the code was mistakenly
added in the non-smoosh configuration preprocessor block. This is fixed by
moving it out of the condition.

Differential Revision: https://phabricator.services.mozilla.com/D146679